[gd_scene load_steps=13 format=3 uid="uid://tms37ikxyjnp"]

[ext_resource type="Script" path="res://card.gd" id="1_v3faj"]
[ext_resource type="Texture2D" uid="uid://cpetl8bjrwu1w" path="res://artwork/cardbacksmall.jpg" id="2_yfd83"]
[ext_resource type="FontFile" uid="uid://dk3ejnxamld0b" path="res://fonts/black-rose-font/BlackRose-2Onld.ttf" id="3_abn6n"]
[ext_resource type="Texture2D" uid="uid://diy4uui4bvjog" path="res://artwork/icContemplative.png" id="3_ghhy5"]
[ext_resource type="Texture2D" uid="uid://drovek2plnibm" path="res://artwork/influencevalue.png" id="4_4uc1l"]
[ext_resource type="Texture2D" uid="uid://gxx41n42vrca" path="res://artwork/skull1.png" id="4_iphkp"]
[ext_resource type="Texture2D" uid="uid://dkm5122d374aq" path="res://artwork/high-shot.png" id="6_q3c8p"]
[ext_resource type="FontFile" uid="uid://d0d6xfk12u065" path="res://fonts/birch_leaf/BirchLeaf.otf" id="6_t6sp7"]

[sub_resource type="LabelSettings" id="LabelSettings_hyaa5"]
font = ExtResource("6_t6sp7")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_per16"]
font = ExtResource("3_abn6n")
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_amg6t"]
font = ExtResource("6_t6sp7")
font_size = 12
font_color = Color(0.0901961, 1, 1, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_moxms"]
font = ExtResource("3_abn6n")
font_size = 10

[node name="Card" type="Node2D"]
script = ExtResource("1_v3faj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yfd83")

[node name="MarginContainer" type="MarginContainer" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -100.0
offset_right = -75.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 13
theme_override_constants/margin_top = 13
theme_override_constants/margin_right = 13
theme_override_constants/margin_bottom = 13

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/MarginContainer"]
layout_mode = 2

[node name="TopBar" type="MarginContainer" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 18

[node name="Title" type="Label" parent="Sprite2D/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Something Goes Bump in the night"
label_settings = SubResource("LabelSettings_hyaa5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CardGraphic" type="TextureRect" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_ghhy5")
expand_mode = 1

[node name="FearIcon" type="Sprite2D" parent="Sprite2D/MarginContainer/VBoxContainer/CardGraphic"]
position = Vector2(111, 96)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_iphkp")

[node name="FearCost" type="Label" parent="Sprite2D/MarginContainer/VBoxContainer/CardGraphic/FearIcon"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -28.0
offset_right = 22.0
offset_bottom = -2.0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_per16")

[node name="Desc" type="Label" parent="Sprite2D/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 8
text = "Card Desc Text which just kind of fills in some data."
label_settings = SubResource("LabelSettings_amg6t")
autowrap_mode = 2

[node name="Tags" type="Label" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "tag"
label_settings = SubResource("LabelSettings_moxms")

[node name="TypeIcon" type="Sprite2D" parent="Sprite2D/MarginContainer"]
position = Vector2(128, 23)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_q3c8p")

[node name="InfluenceIcon" type="Sprite2D" parent="Sprite2D/MarginContainer"]
position = Vector2(21, 23)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_4uc1l")

[node name="InfluenceValue" type="Label" parent="Sprite2D/MarginContainer/InfluenceIcon"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -29.5
offset_right = -6.0
offset_bottom = -2.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"
label_settings = SubResource("LabelSettings_per16")

[node name="MouseRegion" type="Button" parent="Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -100.0
offset_right = -75.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0

[connection signal="pressed" from="Sprite2D/MouseRegion" to="." method="_on_mouse_region_pressed"]
